Fix range slider track invisible on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ h4, p {
 	margin-top: -4px;
 }
 
-.stat-selector-slider::-webkit-slider-runnable-track {
+.stat-selector-slider::-webkit-slider-runnable-track, .stat-selector-slider::-moz-range-track {
 	width: 100%;
 	height: 3px;
 	cursor: pointer;
